# erigon-dumper

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PLAN.md  README.md  test_compress.rs
.github/workflows/: ci.yml
examples/: find_snapshots.rs  read_snapshot.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compress.rs
go/: CONSUMER_PATTERNS.md  README.md
src/: compress.rs  compress_go_port.rs  compress_go_port2.rs  compress_go_port3.rs  compress_test.rs  decompress.rs  dictionary_builder.rs  error.rs  lib.rs  main.rs  parallel_compress.rs  patricia.rs  reader.rs  seg_reader.rs  segment.rs  test_sorting.rs  types.rs
src/snapshots/: error.rs  index.rs  mod.rs  reader.rs  recsplit.rs
tests/: compress_go_test.rs  compress_minimal_test.rs  compress_test.rs  compression_integration_test.rs  decompress_test.rs  fuzz_test.proptest-regressions  fuzz_test.rs  integration_test.rs  test_minimal.rs
