[package]
name = "erigon-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
alloy-primitives = "0.8"
alloy-consensus = "0.8"
alloy-rpc-types = "0.8"
alloy-rlp = "0.3"

# Zero-copy and memory mapping
memmap2 = "0.9"
bytemuck = { version = "1.20", features = ["derive"] }
bytes = "1.8"

# Error handling
thiserror = "2.0"
tracing = "0.1"
log = "0.4"

# Compression dependencies
bitvec = "1.0"
cdivsufsort = "2.0"
lazy_static = "1.4"
radix_trie = "0.2"

# Index reading dependencies  
murmur3 = "0.5"
elias-fano = "1.1"

# Temp files (used in tests and ETL)
tempfile = "3.14"

# Hex encoding for display
hex = "0.4"

# CLI support (for binaries)
clap = { version = "4.5", features = ["derive"], optional = true }
chrono = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
default = []
cli = ["clap", "chrono", "env_logger"]

[[bin]]
name = "snapshot-reader"
required-features = ["cli"]

[dev-dependencies]
criterion = "0.5"
smol-potat = "1.1"  # Minimal async runtime for tests
crc32fast = "1.4"  # For checksum tests matching Go
env_logger = "0.10"  # For test logging
proptest = "1.4"  # Property-based testing
rand = "0.8"  # Random number generation for tests
chrono = "0.4"  # For timestamp formatting in examples